force-app/main/default/objects/Cubicles__c/Cubicles__c.object-meta.xml
<CustomObject>
    <label>Cubicle</label>
    <nameField>
        <displayFormat>CU-{0000}</displayFormat>
        <label>Cubicle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cubicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>