force-app/main/default/objects/Cubicles__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Block</label>
    <referenceTo>Blocks__c</referenceTo>
    <relationshipLabel>Cubicles</relationshipLabel>
    <relationshipName>Cubicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>