force-app/main/default/objects/Cubicles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cubicle_Id__c</columns>
    <columns>entry__c</columns>
    <columns>Floor_Name__c</columns>
    <columns>Building_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>