force-app/main/default/objects/Cubicles__c/listViews/NGP_M0.listView-meta.xml
<ListView>
    <fullName>NGP_M0</fullName>
    <columns>NAME</columns>
    <columns>Cubicle_Id__c</columns>
    <columns>entry__c</columns>
    <columns>Building_Name__c</columns>
    <columns>Floor_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Floor_Name__c</field>
        <operation>equals</operation>
        <value>M0</value>
    </filters>
    <label>NGP_M0</label>
</ListView>